@@ -165,48 +165,25 @@ public class Parameters {
   private static void checkParameterTypes(String methodName, 
       Class[] parameterTypes, String methodAnnotation, String[] parameterNames) 
   {
-
-    if (true) {
-      int totalLength = parameterTypes.length;
-      Set<Class> injectedTypes = new HashSet<Class>() {{
-        add(ITestContext.class);
-        add(ITestResult.class);
-        add(XmlTest.class);
-        add(Method.class);
-        add(Object[].class);
-      }};
-      for (int i = 0; i < parameterTypes.length; i++) {
-        if (injectedTypes.contains(parameterTypes[i])) totalLength--;
-      }
-  
-      if (parameterNames.length != totalLength) {
-        throw new TestNGException( "Method " + methodName + " requires " 
-            + parameterTypes.length + " parameters but " 
-            + parameterNames.length
-            + " were supplied in the "
-            + methodAnnotation
-            + " annotation.");
-      }
+    int totalLength = parameterTypes.length;
+    Set<Class> injectedTypes = new HashSet<Class>() {{
+      add(ITestContext.class);
+      add(ITestResult.class);
+      add(XmlTest.class);
+      add(Method.class);
+      add(Object[].class);
+    }};
+    for (int i = 0; i < parameterTypes.length; i++) {
+      if (injectedTypes.contains(parameterTypes[i])) totalLength--;
     }
-    else {
-        
-      if(parameterNames.length == parameterTypes.length) return;
-      
-      for(int i= parameterTypes.length - 1; i >= parameterNames.length; i--) {
-        Class type = parameterTypes[i];
-        if(!ITestContext.class.equals(type)
-            && !ITestResult.class.equals(type)
-            && !XmlTest.class.equals(type)
-            && !Method.class.equals(type)
-            && !Object[].class.equals(type)) {
-          throw new TestNGException( "Method " + methodName + " requires " 
-              + parameterTypes.length + " parameters but " 
-              + parameterNames.length
-              + " were supplied in the "
-              + methodAnnotation
-              + " annotation.");        
-        }
-      }
+
+    if (parameterNames.length != totalLength) {
+      throw new TestNGException( "Method " + methodName + " requires " 
+          + parameterTypes.length + " parameters but " 
+          + parameterNames.length
+          + " were supplied in the "
+          + methodAnnotation
+          + " annotation.");
     }
   }
 
@@ -226,28 +203,28 @@ public class Parameters {
       result = value;
     } 
     else if(type == int.class || type == Integer.class) {
-      result = new Integer(Integer.parseInt(value));
+      result = Integer.valueOf(Integer.parseInt(value));
     }
     else if(type == boolean.class || type == Boolean.class) {
       result = Boolean.valueOf(value);          
     }
     else if(type == byte.class || type == Byte.class) {
-      result = new Byte(Byte.parseByte(value));                    
+      result = Byte.valueOf(Byte.parseByte(value));                    
     }
     else if(type == char.class || type == Character.class) {
-      result = new Character(value.charAt(0));                              
+      result = Character.valueOf(value.charAt(0));                              
     }
     else if(type == double.class || type == Double.class) {
-      result = new Double(Double.parseDouble(value));
+      result = Double.valueOf(Double.parseDouble(value));
     }
     else if(type == float.class || type == Float.class) {
-      result = new Float(Float.parseFloat(value));          
+      result = Float.valueOf(Float.parseFloat(value));          
     }
     else if(type == long.class || type == Long.class) {
-      result = new Long(Long.parseLong(value));
+      result = Long.valueOf(Long.parseLong(value));
     }
     else if(type == short.class || type == Short.class) {
-      result = new Short(Short.parseShort(value));
+      result = Short.valueOf(Short.parseShort(value));
     }
     else {
       assert false : "Unsupported type parameter : " + type;
@@ -405,7 +382,7 @@ public class Parameters {
         allParameterNames.put(n, n);
       }
 
-      parameters  = MethodHelper.invokeDataProvider(
+      parameters  = MethodInvocationHelper.invokeDataProvider(
           instance, /* a test instance or null if the dataprovider is static*/
           dataProviderHolder.method, 
           testMethod,
